<resources>
    <string name="app_name">Mobi Money</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- Menu Navigation Items -->
    <string name="nav_item_home">Home</string>
    <string name="nav_item_expense">Expenses</string>
    <string name="nav_item_income">Income</string>
    <string name="nav_item_transactions">New Sms Transactions</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="nav_item_budget">Budget</string>
    <string name="nav_item_logout">Log Off</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_help">Help</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">EMAIL</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_login_in">LOG IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">REGISTER</string>
    <string name="action_forgot_password">FORGOT YOUR PASSWORD?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank home fragment</string>
    <string name="home_fragment">homeFragment</string>
    <string name="new_sms_transaction_fragment">newSmsTransactionFragment</string>

    <!-- Home Summary Card View -->
    <string name="home_summary_title_income">Income</string>
    <string name="home_summary_title_expense">Expense</string>
    <string name="home_summary_title_surplus">Surplus</string>
    <string name="home_summary_title_loss">Loss</string>
    <string name="home_summary_title_budget">Budget</string>
    <string name="title_home">Home</string>
    <string name="title_new_sms">New Sms Transactions</string>


</resources>
