<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@+id/nav_first_group">
        <item
            android:id="@+id/nav_item_home"
            android:icon="@drawable/ic_home_black_48dp"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/nav_item_expenses"
            android:icon="@drawable/ic_account_balance_wallet_black_48dp"
            android:title="@string/nav_item_expense" />
        <item
            android:id="@+id/nav_item_income"
            android:icon="@drawable/ic_account_balance_wallet_black_48dp"
            android:title="@string/nav_item_income" />
        <item
            android:id="@+id/nav_item_transactions"
            android:icon="@drawable/ic_account_balance_wallet_black_48dp"
            android:title="@string/nav_item_transactions" />
        <item
            android:id="@+id/nav_item_budget"
            android:icon="@drawable/ic_shopping_basket_black_48dp"
            android:title="@string/nav_item_budget" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/nav_second_group">
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_power_settings_new_black_48dp"
            android:title="@string/nav_item_logout">
        </item>
        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/nav_item_settings">
        </item>
        <item
            android:id="@+id/nav_item_help"
            android:icon="@drawable/ic_help_outline_black_48dp"
            android:title="@string/nav_item_help">
        </item>
    </group>

   <!-- <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

    <group>


    </group>-->

</menu>
