<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_summary_card_view_date"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/home_summary_title_income" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/home_summary_title_expense" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/home_summary_card_view_title_gain_loss"
                    android:layout_height="match_parent" />
                

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/home_summary_card_view_income"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/home_summary_card_view_expense"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />

                <TextView
                    android:id="@+id/home_summary_card_view_gain_loss"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/home_summary_title_budget"/>

            <TextView
                android:id="@+id/home_summary_card_view_budget"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="30dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>